# BrechaBot

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PUBLISHING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts
.github/workflows/: ci.yml
src/: bin.ts  cli.ts  index.ts  models.ts  orchestrator.ts  scoring.ts
src/adapters/: index.ts
src/brechabot/: cli.py  models.py  orchestrator.py  scoring.py
src/brechabot/adapters/: __init__.py  anthropic.py  base.py  cohere.py  openai.py  rest.py
src/brechabot/corpus/: loader.py
src/brechabot/judge/: combine.py  llm_judge.py  markers.py
src/brechabot/llm/: client.py
src/brechabot/packs/starter/: categories.json  pack.json
src/brechabot/report/: html.py
src/corpus/: loader.ts
src/corpus/packs/starter/: attacks.json
src/judge/: combine.ts  llmJudge.ts  markers.ts
src/llm/: client.ts
src/report/: html.ts
test/: adapters.test.ts  cli.test.ts  combine.test.ts  corpus.test.ts  leak-guard.test.ts  llm-client.test.ts  llm-judge.test.ts  markers.test.ts  models.test.ts  orchestrator.test.ts  report.test.ts  scoring.test.ts
tests/: conftest.py  test_adapters.py  test_cli.py  test_combine.py  test_corpus.py  test_leak_guard.py  test_llm_client.py  test_llm_judge.py  test_markers.py  test_models.py  test_orchestrator.py  test_packs.py  test_report.py  test_scoring.py
