[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brechabot"
version = "0.1.0"
description = "Open-source AI chatbot red-team scanner — finds the breaches in your bot's defenses."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["llm", "security", "red-team", "prompt-injection", "jailbreak", "owasp", "ai-security"]
dependencies = ["httpx>=0.27", "pydantic>=2.6", "typer>=0.12", "tenacity>=8.2", "pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4", "mypy>=1.9", "types-PyYAML"]

[project.urls]
Homepage = "https://github.com/bravokk29/brechabot"
Repository = "https://github.com/bravokk29/brechabot"

[project.scripts]
brechabot = "brechabot.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/brechabot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
ignore_missing_imports = true
